src/snapshots/parse_expression_simple_multiplication.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 10*20
---
location:
  line: 1
  column: 1
kind:
  binary:
    - multiply
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "10"
          - decimal
    - location:
        line: 1
        column: 4
      kind:
        int_constant:
          - "20"
          - decimal
