src/snapshots/parse_expression_simple_remainder.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 3%2
---
location:
  line: 1
  column: 1
kind:
  binary:
    - modulo
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "3"
          - decimal
    - location:
        line: 1
        column: 3
      kind:
        int_constant:
          - "2"
          - decimal
