src/snapshots/parse_expression_simple_subtraction.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 1-20
---
location:
  line: 1
  column: 1
kind:
  binary:
    - subtract
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "1"
          - decimal
    - location:
        line: 1
        column: 3
      kind:
        int_constant:
          - "20"
          - decimal
