src/snapshots/parse_expression_unary_negate_binary_operator_expression.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: "-(4+3)"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 3
      kind:
        binary:
          - add
          - location:
              line: 1
              column: 3
            kind:
              int_constant:
                - "4"
                - decimal
          - location:
              line: 1
              column: 5
            kind:
              int_constant:
                - "3"
                - decimal
