src/snapshots/parse_expression_unary_negation.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: "-10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "10"
          - decimal
